--- a/app/src/main/res/layout/drawer_row.xml
+++ b/app/src/main/res/layout/drawer_row.xml
@@ -16,5 +16,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
         android:text="TextView" />
 </LinearLayout>
